<resources>
    <string name="app_name">InventarioSkydata</string>
    <string name="nombre">Nombre</string>
    <string name="cantidad">Cantidad</string>
    <string name="campo">Campo</string>
    <string name="id">id</string>
    <string name="agregar">Agregar</string>
    <string name="title_activity_show_">Show_Activity</string>
    <string name="salida">Salida</string>
    <string name="entrada">Entrada</string>
    <string name="agregar_articulo_a_inventario">Agregar articulo a inventario</string>
    <string name="agregar_a_inventario">Agregar a inventario</string>
    <string name="listado">Listado</string>
    <string name="escanear">Escanear</string>
</resources>
