<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Agregar_Activity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/agregar_articulo_a_inventario"
        android:textColor="#3F51B5"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre">

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:accessibilityHeading="true"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="15dp"
            tools:ignore="LabelFor"
            tools:targetApi="o" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad">

        <EditText
            android:id="@+id/cantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:paddingTop="15dp"
            android:importantForAutofill="no"
            tools:targetApi="o"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--<com.google.android.material.textfield.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/campo">-->

        <!--<EditText-->
            <!--android:id="@+id/campo"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:ems="10"-->
            <!--android:inputType="text"-->
            <!--android:paddingTop="15dp"-->
            <!--android:importantForAutofill="no"-->
            <!--tools:targetApi="o"-->
            <!--tools:ignore="LabelFor" />-->
    <!--</com.google.android.material.textfield.TextInputLayout>-->

    <Spinner
        android:id="@+id/Armario"
        android:layout_width="match_parent"
        android:layout_height="50sp" />

    <Spinner
        android:id="@+id/Estante"
        android:layout_width="match_parent"
        android:layout_height="50sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/btn"
        android:onClick="CrearInventario"
        android:text="@string/agregar"
        android:textColor="@android:color/white" />

</LinearLayout>